# capice

./: .flake8  .gitignore  .travis.yml  README.md  capice.py  config.cfg  default.cfg  pom.xml  predict.sh  pyproject.toml  requirements.txt  requirements37.txt  setup.py  sonar-project.properties  test_global.py  test_prediction.py  test_training.py  train_model.py  venv_installer.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
CAPICE_example/: example_impute_values.json  model_inference.py  not_so_default.cfg  pipeline_example.sh  specified_defaults.json  test_caddAnnotated.tsv  test_input.vcf  test_logfile  test_predictions.txt  train_example_impute.json
CAPICE_scripts/: model_inference.py  train_model.py
CAPICE_scripts/src/: command_line_supporter.py  global_manager.py  logger.py  preprocess.py  preprocessing.py
CAPICE_vcf_scripts/: capice_vcf.sh  conf.template
capice/: capice.py
capice/src/: main_capice.py  main_predict.py  main_train.py
resources/: test_input.vcf  train_features.json  train_impute_values.json  xgb_booster_poc.ubj
scripts/: balance_dataset.py  convert_vep_vcf_to_tsv_capice.sh  extract_model.py  pickle_json_model.py
scripts/tests/: test_convert_vep_vcf_to_tsv_capice.sh
src/: args_handler.py  args_handler_predict.py  args_handler_subparser.py  args_handler_train.py  args_handler_utils.py  capice.py  command_line_supporter.py  exporter.py  global_manager.py  input_checker.py  logger.py  main.py  main_capice.py  main_predict.py  main_train.py  predicter.py  preprocess.py  trainer.py
src/checkers/: cadd_version_checker.py  train_checker.py
src/data_files/: __template_impute_values__.py  cadd14_grch37.py  cadd_features.py
src/data_files/imputing/: Cadd14Grch37.py  README.md  cadd14_grch37.py  impute_values_abstract.py
src/errors/: errors.py
src/imputers/: cadd_imputing.py
src/main/python/: __version__.py
src/main/resources/: application.properties  logback-spring.xml
src/models/: README.md  abstract_model.py  capice_v1_0_0.py  capice_v2_0_0.py  model_abstract.py  training_preprocessor.py  xgboost_0721.py  xgboost_111.py
src/molgenis/capice/: __init__.py  capice.py  main_capice.py  main_explain.py  main_predict.py  main_train.py
src/parsers/: cadd_header_parser.py  cadd_parser.py
src/preprocessors/: preprocessor.py
src/test/python/: test_balance_dataset.py  test_edge_cases_predict.py  test_main_nontrain.py  test_main_predict.py  test_main_train.py  test_templates.py
src/test/resources/: capice_precomputed_scores.vcf  capice_predictions.vcf  input_precomputed_scores.tsv  input_predictions.tsv  sorted.tsv
src/utilities/: utilities.py
tests/capice/: test__init__.py  test__version__.py  test_balance_dataset.py  test_edge_cases_predict.py  test_main_explain.py  test_main_predict.py  test_main_train.py  test_resources.py  test_templates.py
tests/capice/cli/: test_args_handler_explain.py  test_args_handler_parent.py  test_args_handler_predict.py  test_args_handler_train.py
tests/capice/core/: test_capice_exporter.py  test_logger.py  test_specific_logcalls.py
tests/capice/utilities/: test_capice_imputing.py  test_categorical_processor.py  test_class_suggestor.py  test_column_checker.py  test_column_utils.py  test_custom_logging_filter.py  test_dynamic_loader.py  test_file_postprocessor.py  test_imputer.py  test_input_parser.py  test_input_processor.py  test_load_file_postprocessor.py  test_manual_vep_processor.py  test_predict.py  test_predictor.py  test_preprocessing.py  test_preprocessor.py  test_utilities.py
tests/capice/validators/: test_input_validator.py  test_model_validator.py  test_post_file_parse_validator.py  test_post_vep_processing_validator.py  test_property_type_validator.py  test_version_validator.py
tests/capice/vep/: test_amino_acids.py  test_cdna_position.py  test_cons_detail.py  test_consequence.py  test_domain.py  test_intron_exon.py  test_length.py  test_motif_ehi_pos.py  (+6 more)
tests/resources/: VEP104.json  features_test.json  xgb_booster_poc.json  xgb_booster_poc.ubj  xgb_booster_poc.ujb
(+362 files in other folders)
