[build-system]
requires = [
    "wheel",
    "poetry-core"
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "capice"
description = "Consequence Agnostic Pathogenicity Interpretation of Clinical Exoma variations. State of the art machine learning to predict SNVs and InDels pathogenicity."
version = "5.1.0"
authors = [
    "Molgenis <molgenis-support@umcg.nl>"
]
readme = "README.md"
license = "LICENSE"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3.10"
]
scripts = { capice = { callable = "molgenis.capice.capice:main" } }
packages = [
    { include = "molgenis", from = 'src' }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.24.1"
pandas = "1.5.3"
scipy = "1.10.0"
scikit-learn = "1.2.1"
xgboost = "1.7.3"
pytest = { version = "^7.2" , optional = true }
coverage = { version = "^7.2" ,  optional = true }
mypy = { version = "^1.0" ,  optional = true }
flake8 = { version = "^6.0" ,  optional = true }
flake8-import-order = { version = "^0.18" ,  optional = true }
flake8-pyproject = { version = "^1.2" ,  optional = true }

[tool.poetry.extras]
test = ["pytest"]
ci = ["coverage", "mypy", "flake8", "flake8-import-order", "flake8-pyproject"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.flake8]
import-order-style = "pep8"
max-line-length=100
application-import-names = ["molgenis","tests"]
